navigation bar added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap"
+    />
+
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="home-container">
+      <header class="main-header">
+        <div class="logo-container" style="display: flex; align-items: center">
+          <span style="color: #1f1f1f; font-size: 60px; font-weight: 600"
+            >A</span
+          >
+          <span style="color: #fc3314; font-size: 60px; font-weight: 600"
+            >K</span
+          >
+          <span style="color: #fc3314; font-size: 30px; font-weight: 600"
+            >Portfolio</span
+          >
+        </div>
+        <nav class="main-nav">
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#blog">Blog</a></li>
+          </ul>
+        </nav>
+        <button class="rectangular-button">Click Me</button>
+
+        <!-- <div class="cta-container" style="background: #1f1f1f">
+        <div class="cta-text" style="color: black">Let’s Talk</div>
+      </div> -->
+      </header>
+    </div>
+  </body>
 </html>
