--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <title>Document</title>
   </head>
@@ -34,10 +38,6 @@
           </ul>
         </nav>
         <button class="rectangular-button">Click Me</button>
-
-        <!-- <div class="cta-container" style="background: #1f1f1f">
-        <div class="cta-text" style="color: black">Let’s Talk</div>
-      </div> -->
       </header>
       <div class="circle"></div>
       <div class="main-body-container">
@@ -60,9 +60,91 @@
           <button class="border-button">Portfolio</button>
         </div>
         <div class="right-main-body">
-          <img src="images/display_picture.png" alt="My Profile Picture" style="aspect-ratio: 1; height: 400px;"/>
+          <img src="images/luffy.png" alt="My Profile Picture" />
         </div>
       </div>
     </div>
+
+    <div class="about-service-wrapper-container">
+      <div class="about-me-container">
+        <div class="highlight white centeredText">About Me</div>
+        <div class="subtitle white centeredContainer">
+          I'm Ashish Koirala, a mobile app developer dedicated to crafting
+          intuitive and visually stunning mobile applications. I am
+          well-equipped with all the latest mobile app trends to deliver feature
+          rich applications to my clients. Let's collaborate and shape the
+          future of apps together.
+        </div>
+        <div class="exp-container">
+          <div class="numbers-represented-container">
+            <p class="number">502</p>
+            <p class="desc">Completed Projects</p>
+          </div>
+          <div class="numbers-represented-container">
+            <p class="number">502</p>
+            <p class="desc">Completed Projects</p>
+          </div>
+          <div class="numbers-represented-container">
+            <p class="number">502</p>
+            <p class="desc">Completed Projects</p>
+          </div>
+        </div>
+      </div>
+      <div class="service-container">
+        <div class="highlight centeredText">Services</div>
+        <div class="subtitle centeredContainer">
+          Explore my mobile app services, from user interface and experience to
+          prototyping and testing. Let's craft exceptional digital products
+          together.
+        </div>
+        <div class="exp-container">
+          <div class="numbers-represented-container">
+            <img src="images/Vector.svg" alt="Your SVG Image" />
+            <p class="desc black">App Development</p>
+            <p>
+              Craft high-performance native apps for iOS/Android or versatile
+              cross-platform solutions, ensuring optimal user experience and
+              feature integration.
+            </p>
+          </div>
+          <div class="numbers-represented-container">
+            <img src="images/Vector1.svg" alt="Your SVG Image" />
+            <p class="desc black">App Design and User Experience (UX)/UI</p>
+            <p>
+              Create visually appealing interfaces and enhance user experience
+              through wireframing, prototyping, and user-centric design
+              principles.
+            </p>
+          </div>
+          <div class="numbers-represented-container">
+            <img src="images/Vector3.svg" alt="Your SVG Image" />
+            <p class="desc black">App Maintenance and Support</p>
+            <p>
+              Provide ongoing support with regular updates, bug fixes, and
+              security enhancements to ensure a seamless and secure app
+              experience.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Footer with Social Icons -->
+    <footer>
+      <p>Follow me on social media </p>
+      <ul class="social-icons">
+        <li>
+          <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
+        </li>
+        <li>
+          <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+        </li>
+        <li>
+          <a href="#" target="_blank"><i class="fa fa-envelope-square"></i></a>
+        </li>
+        <li>
+          <a href="#" target="_blank"><i class="fa fa-github"></i></a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
