--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
         </div>
         <nav class="main-nav">
           <ul>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#blog">Blog</a></li>
+            <li><a href="contact-us.html">Contact Me</a></li>
           </ul>
         </nav>
         <button class="rectangular-button">Click Me</button>
@@ -65,7 +64,7 @@
       </div>
     </div>
 
-    <div class="about-service-wrapper-container">
+    <div id="about" class="about-service-wrapper-container">
       <div class="about-me-container">
         <div class="highlight white centeredText">About Me</div>
         <div class="subtitle white centeredContainer">
@@ -130,7 +129,7 @@
     </div>
     <!-- Footer with Social Icons -->
     <footer>
-      <p>Follow me on social media </p>
+      <p>Follow me on social media</p>
       <ul class="social-icons">
         <li>
           <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
