--- a/contact-us.html
+++ b/contact-us.html
@@ -47,6 +47,8 @@
           Have a question or a project in mind? I'd love to hear <br/> from you. Let's
           chat and make something amazing together.
         </p>
+        <img src="images/luffy.png" alt="My Profile Image" style="border-radius: 50%; height: 200px; width:200px;" />
+
       </div>
       <div class="contact-form">
         <input
