--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li><a href="contact-us.html">Contact Me</a></li>
           </ul>
         </nav>
-        <button class="rectangular-button">Click Me</button>
+        <button class="rectangular-button" onclick="window.location.href='contact-us.html'">Click Me</button>
       </header>
       <div class="circle"></div>
       <div class="main-body-container">
@@ -54,8 +54,8 @@
             experiences.Let's embark on a journey to redefine user interaction
             through cutting-edge app development!
           </p>
-          <button class="rectangular-button">Hire Me</button>
-          <button class="border-button">Portfolio</button>
+          <button class="rectangular-button" onclick="window.location.href='https://www.linkedin.com/in/ashish-koirala-858b65204'">Hire Me</button>
+          <button class="border-button" onclick="window.location.href='contact-us.html'" >Contact Me</button>
         </div>
         <div class="right-main-body">
           <img src="images/luffy.png" alt="My Profile Picture" />
