--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+ 
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ashish Koirala - Mobile App Developer Portfolio. Explore my services in app development, design, and maintenance. Contact me for your next project." />
     <link rel="stylesheet" href="css/main.css" />
     <link
       rel="stylesheet"
@@ -13,7 +14,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
-    <title>Document</title>
+    <title>Ashish Koirala Portfolio</title>
   </head>
   <body>
     <div class="home-container">
