added alt to imgs

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <div class="exp-container">
           <div class="numbers-represented-container">
-            <img src="images/Vector.svg" alt="Your SVG Image" />
+            <img src="images/Vector.svg" alt="app development vector image" />
             <p class="desc black">App Development</p>
             <p>
               Craft high-performance native apps for iOS/Android or versatile
@@ -107,7 +107,7 @@
             </p>
           </div>
           <div class="numbers-represented-container">
-            <img src="images/Vector1.svg" alt="Your SVG Image" />
+            <img src="images/Vector1.svg" alt="UI/UX vector image" />
             <p class="desc black">App Design and User Experience (UX)/UI</p>
             <p>
               Create visually appealing interfaces and enhance user experience
@@ -116,7 +116,7 @@
             </p>
           </div>
           <div class="numbers-represented-container">
-            <img src="images/Vector3.svg" alt="Your SVG Image" />
+            <img src="images/Vector3.svg" alt="App Maintenance Vector Image" />
             <p class="desc black">App Maintenance and Support</p>
             <p>
               Provide ongoing support with regular updates, bug fixes, and
